[tool.poetry]
name = "vrf-worker-v1"
version = "0.1.2"
description = ""
authors = ["Band Protocol"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.10.x"
flask = "2.1.2"
aioflask = "^0.4.0"
func-timeout = "^4.3.5"
python-dotenv = "^0.21.0"
pyband = "^0.3.5"
google-cloud-tasks = "^2.10.4"
web3 = "^5.31.1"
psycopg2 = "^2.9.5"
flask-sqlalchemy = "2.5.1"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"
