[project]
name = "vrf-worker-v1"
version = "0.2.0-alpha.1"
description = ""
authors = ["Band Protocol"]
license = "Apache 2.0"

requires-python = ">=3.13"
dependencies = [
    "logbook==1.8.0",
    "omegaconf==2.3.0",
    "pyband==0.4.0rc2",
    "web3==7.9.0",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
